RESOLVED FIXED135955
Fixed a bmalloc crash seen on the EWS bot
https://bugs.webkit.org/show_bug.cgi?id=135955
Summary Fixed a bmalloc crash seen on the EWS bot
Geoffrey Garen
Reported 2014-08-14 14:34:56 PDT
Fixed a bmalloc crash seen on the EWS bot
Attachments
Patch (1.60 KB, patch)
2014-08-14 14:37 PDT, Geoffrey Garen
kling: review+
Geoffrey Garen
Comment 1 2014-08-14 14:37:13 PDT
Geoffrey Garen
Comment 2 2014-08-14 14:40:03 PDT
Csaba Osztrogonác
Comment 3 2014-08-15 02:11:29 PDT
(In reply to comment #2) > Committed r172608: <http://trac.webkit.org/changeset/172608> Maybe this change caused the issue on Apple Mac WK1 EWS bots: https://lists.webkit.org/pipermail/webkit-dev/2014-August/026797.html Could you check it?
Geoffrey Garen
Comment 4 2014-08-15 10:53:50 PDT
> (In reply to comment #2) > > Committed r172608: <http://trac.webkit.org/changeset/172608> > > Maybe this change caused the issue on Apple Mac WK1 EWS bots: > https://lists.webkit.org/pipermail/webkit-dev/2014-August/026797.html > > Could you check it? This patch edited the SYSCALL macro, which is only used by bmalloc, which is disabled. (I just double-checked that there are no other clients of SYSCALL.) So, I think something else must have caused the failure.
Note You need to log in before you can comment on or make changes to this bug.